; ModuleID = '/home/carl/AnghaBench/toxcore/auto_tests/extr_onion_test.c_dht_ip_callback.c'
source_filename = "/home/carl/AnghaBench/toxcore/auto_tests/extr_onion_test.c_dht_ip_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NUM_FIRST = common dso_local global i64 0, align 8
@first_ip = common dso_local global i32 0, align 4
@NUM_LAST = common dso_local global i64 0, align 8
@last_ip = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [7 x i8] c"Error.\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dht_ip_callback(i8* %0, i64 %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i64, i64* @NUM_FIRST, align 8
  %8 = load i64, i64* %5, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %10, label %11

10:                                               ; preds = %3
  store i32 1, i32* @first_ip, align 4
  br label %18

11:                                               ; preds = %3
  %12 = load i64, i64* @NUM_LAST, align 8
  %13 = load i64, i64* %5, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %15, label %16

15:                                               ; preds = %11
  store i32 1, i32* @last_ip, align 4
  br label %18

16:                                               ; preds = %11
  %17 = call i32 @ck_abort_msg(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  br label %18

18:                                               ; preds = %16, %15, %10
  ret void
}

declare dso_local i32 @ck_abort_msg(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
